--- a/lesson12/rental.html
+++ b/lesson12/rental.html
@@ -32,33 +32,34 @@
         <p class="notice">Rental prices are subject to change due to exconomy cost increase.<br>
             All reservations made will be guaranteed price. </p>
         <div class="rent-pics">
-            <picture>
+            <figure>
                 <img src="images/metro.jpg" alt="metro">
                 <figcaption>Honda Metro Scooter</figcaption>
-            </picture>
-            <picture>
+            </figure>
+            <figure>
                 <img src="images/dio.jpg" alt="dio">
                 <figcaption>Honda Dio Scooter</figcaption>
-            </picture>
-            <picture>
+            </figure>
+            <figure>
                 <img src="images/pcx.jpg" alt="pcx">
                 <figcaption>Honda PCX150 Scooter</figcaption>
-            </picture>
-            <picture>
+            </figure>
+            <figure>
                 <img src="images/pioneer.jpg" alt="atv">
                 <figcaption>Honda Pioneer ATV</figcaption>
-            </picture>
-            <picture>
+            </figure>
+            <figure>
                 <img src="images/4dr.jpg" alt="jeep4">
                 <figcaption>Jeep Wrangler 4 dr</figcaption>
-            </picture>
-            <picture>
+            </figure>
+            <figure>
                 <img src="images/2dr.jpg" alt="jeep2">
                 <figcaption>Jeep Wrangler 2 dr</figcaption>
-            </picture>
+            </figure>
         </div>
-        <table>
+        <table class="table">
             <tbody>
+                <tr>
                 <td class="header">Vehicles</td>
                 <td class="header">Seats</td>
                 <td class="header">Reserved<br>
@@ -67,6 +68,7 @@
                 <td class="header">Walk~In<br>
                     Half (H) & Full (F) Day
                 </td>
+                </tr>
             </tbody>
         </table>
     </main>
