--- a/lesson12/reservation.html
+++ b/lesson12/reservation.html
@@ -21,7 +21,6 @@
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
             <li><a href="home.html">Home</a></li>
             <li><a href="tours.html">Tours</a></li>
-
             <li><a href="rental.html">Rentals</a></li>
             <li><a class="current" href="#">Reservation</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -29,7 +28,7 @@
     </nav>
     <main>
         <img src="images/ocean.jpg" class="wave" alt="waves">
-        <h1 class="title">Rental Agreement and Reservation</h1>
+        <h1 class="title">Rental Agreement</h1>
         <div class="terms">
             <h2 class="con">Terms and Conditions</h2>
             <ul>
