--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Chelsea Thomson</h1>
     </header>
         <main>
-            <h2>WDD230 Web Assignment Portal</h2>
+            <h2>WDD230 Web Assignments</h2>
             <ul>
                 <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03:<a href="../lesson3/">Weather Plan Doc</a></li>
