--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -16,7 +16,7 @@
         <h1>Design Principles</h1>
     </header>
     <main>
-    <section>
+    <section class = "section-one">
         <h2>Visual Hierarchy</h2>
         <a class="site" href="https://www.motosport.com">MotoSport Shop</a> 
         <img src="images/motosport1.jpg" alt="moto bike">   
@@ -26,7 +26,7 @@
         step for the user to input their bike information to find products specific for their bike. 
     </p>
     </section>
-    <section>
+    <section class = "section-two">
         <h2>Contrast</h2>
         <a class="site" href="https://www.nationalgeographic.com">Nation Geographic</a>   
         <img src="images/nationalgeo1.jpg" alt="dino">
@@ -36,7 +36,7 @@
         Complimenting colors, balanced fonts and visually appealing. 
     </p>
     </section>
-    <section>       
+    <section class = "section-three">       
         <h2>Rule of Third</h2>
         <a class="site" href="https://www.twowanderingsoles.com/blog/north-island-new-zealand-road-trip-itinerary">TwoWanderingSoles</a>   
         <img src="images/twosoles1.jpg" alt="soles">
