Update index.html with final

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li>Lesson 10:<a href="lesson10/preston-10.html">Preston Weather API</a></li>
                 <li>Lesson 11:<a href="lesson11/lesson9/home/index.html">Weather Outlet Final</a></li>
                 <li>Lesson 12:<a href="lesson12/activity/index.html">SASS Tutorial Activity</a></li>
+                <li>Final Website:<a href="lesson12/home.html">Cozumel Rental Website</li>
             </ul>
         </main>
     <footer>
