Update portal page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Chelsea Thomson</h1>
     </header>
         <main>
-            <h2>WDD230 Web Assignment</h2>
+            <h2>Web Development Assignments</h2>
             <ul>
                 <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03:<a href="../lesson3/">Weather Plan Doc</a></li>
@@ -31,7 +31,11 @@
                 <li>Lesson 10:<a href="lesson10/preston-10.html">Preston Weather API</a></li>
                 <li>Lesson 11:<a href="lesson11/lesson9/home/index.html">Weather Outlet Final</a></li>
                 <li>Lesson 12:<a href="lesson12/activity/index.html">SASS Tutorial Activity</a></li>
-                <li>Final Website:<a href="lesson12/home.html">Cozumel Rental Website</li>
+                <li>Python Project:<a href="https://github.com/SnowMoto/Final-Project/blob/main/welcome.md">Data Structure Tutorial</a></li>
+                <li>WDD130 Project:<a href="https://dirtloop.glitch.me/index.html"></a>Dirt Bike Loop</li>
+                <li>WDD230 Project:<a href="lesson12/home.html">Cozumel Rental Website</li>
+                <li>WDD331 GRoup Project:<a href="https://devpro2k.github.io/desertzen.github.io/mainproject/"></a>Zen Garden</li>    
+                <li>WDD330 Personal Project:<a href=""></a>Coming fa-spoon</li>
             </ul>
         </main>
     <footer>
