update error in links

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <li>Lesson 11:<a href="lesson11/lesson9/home/index.html">Weather Outlet Final</a></li>
                 <li>Lesson 12:<a href="lesson12/activity/index.html">SASS Tutorial Activity</a></li>
                 <li>Python Project:<a href="https://github.com/SnowMoto/Final-Project/blob/main/welcome.md">Data Structure Tutorial</a></li>
-                <li>WDD130 Project:<a href="https://dirtloop.glitch.me/index.html"></a>Dirt Bike Loop</li>
+                <li>WDD130 Project:<a href="https://dirtloop.glitch.me/index.html">Dirt Bike Loop</a></li>
                 <li>WDD230 Project:<a href="lesson12/home.html">Cozumel Rental Website</li>
-                <li>WDD331 GRoup Project:<a href="https://devpro2k.github.io/desertzen.github.io/mainproject/"></a>Zen Garden</li>    
-                <li>WDD330 Personal Project:<a href=""></a>Coming fa-spoon</li>
+                <li>WDD331 Project: <a href="file:///C:/Users/wynel/OneDrive/Desktop/Chelsea/class-code/desertzen.github.io/mainproject/index.html"></a>Team Zen Garden Project</li>    
+                <li>WDD330 Project: <a href="../cwt-wdd330-portal/index.html">Team & Personal Project Portal</a></li>
             </ul>
         </main>
     <footer>
