--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li>Python Project:<a href="https://github.com/SnowMoto/Final-Project/blob/main/welcome.md">Data Structure Tutorial</a></li>
                 <li>WDD130 Project:<a href="https://dirtloop.glitch.me/index.html">Dirt Bike Loop</a></li>
                 <li>WDD230 Project:<a href="lesson12/home.html">Cozumel Rental Website</a></li>
-                <li>WDD331 Project:<a href="file:///C:/Users/wynel/OneDrive/Desktop/Chelsea/class-code/desertzen.github.io/mainproject/index.html">Team Zen Garden Project</a></li>    
+                <li>WDD331 Project:<a href="./mainproject/index.html">Team Zen Garden Project</a></li>    
                 <li>WDD330 Project:<a href="../cwt-wdd330-portal/index.html">Team & Personal Project Portal</a></li>
             </ul>
         </main>
